feat: 상품 카탈로그 구조 개선 및 검수 파이프라인 리팩토링
- 상품/상품그룹 도메인 구조 개선 (CQRS, 배치 상태변경 API)
- 검수 파이프라인 Coordinator → Processor 패턴 통일
- TimeProvider 제거 → Instant.now() 컨벤션 통일
- PublishManager 래퍼 추가 (Manager-wraps-Port 컨벤션)
- SQS Consumer, Scheduler 모듈 신규 추가
- Spring AI Client, FileFlow 클라이언트 연동
- Terraform Stage/Prod 인프라 (ECS, ECR, SQS) 추가
- 테스트 코드 및 RestDocs 보강